Lab3Compilers/Pract3Parser.java
// Generated from Pract3.g4 by ANTLR 4.5.1

  // import java packages
  import java.lang.String;
  import java.io.PrintStream;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Pract3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, AT=2, LCB=3, RCB=4, LB=5, RB=6, Q=7, EQ=8, DASH=9, AND=10, BOOK=11, 
		ARTICLE=12, CONFERENCE=13, AUTHOR=14, TITLE=15, YEAR=16, PUBLISHER=17, 
		JOURNAL=18, PAGES=19, VOLUME=20, NUMBER=21, BOOKTITLE=22, MONTH=23, COMMA=24, 
		Jan=25, Feb=26, Mar=27, Apr=28, May=29, Jun=30, Jul=31, Aug=32, Sep=33, 
		Oct=34, Nov=35, Dec=36, DIGITS=37, PUNC=38, FREETEXT=39;
	public static final int
		RULE_bibtex = 0, RULE_s = 1, RULE_b = 2, RULE_bb = 3, RULE_validCase = 4, 
		RULE_other = 5, RULE_otherBody = 6, RULE_obody = 7, RULE_article = 8, 
		RULE_articleBody = 9, RULE_abody = 10, RULE_articlefield = 11, RULE_conference = 12, 
		RULE_conferenceBody = 13, RULE_cbody = 14, RULE_cfields = 15, RULE_book = 16, 
		RULE_bookBody = 17, RULE_bbody = 18, RULE_bookfield = 19, RULE_authorfield = 20, 
		RULE_yearfield = 21, RULE_monthfield = 22, RULE_titlefield = 23, RULE_publisherfield = 24, 
		RULE_journalfield = 25, RULE_pagesfield = 26, RULE_booktitlefield = 27, 
		RULE_volumefield = 28, RULE_numberfield = 29, RULE_otherField = 30, RULE_otherRH = 31, 
		RULE_value = 32, RULE_author = 33, RULE_authorlist = 34, RULE_string = 35, 
		RULE_pagesString = 36, RULE_pagess = 37, RULE_label = 38, RULE_sep = 39, 
		RULE_qint = 40, RULE_monthString = 41, RULE_month = 42, RULE_free = 43, 
		RULE_keyword = 44;
	public static final String[] ruleNames = {
		"bibtex", "s", "b", "bb", "validCase", "other", "otherBody", "obody", 
		"article", "articleBody", "abody", "articlefield", "conference", "conferenceBody", 
		"cbody", "cfields", "book", "bookBody", "bbody", "bookfield", "authorfield", 
		"yearfield", "monthfield", "titlefield", "publisherfield", "journalfield", 
		"pagesfield", "booktitlefield", "volumefield", "numberfield", "otherField", 
		"otherRH", "value", "author", "authorlist", "string", "pagesString", "pagess", 
		"label", "sep", "qint", "monthString", "month", "free", "keyword"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'@'", "'{'", "'}'", "'('", "')'", "'\"'", "'='", "'-'", null, 
		"'book'", "'article'", "'inproceedings'", "'author'", "'title'", "'year'", 
		"'publisher'", "'journal'", "'pages'", "'volume'", "'number'", "'booktitle'", 
		"'month'", "','", "'Jan'", "'Feb'", "'Mar'", "'Apr'", "'May'", "'Jun'", 
		"'Jul'", "'Aug'", "'Sep'", "'Oct'", "'Nov'", "'Dec'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "AT", "LCB", "RCB", "LB", "RB", "Q", "EQ", "DASH", "AND", 
		"BOOK", "ARTICLE", "CONFERENCE", "AUTHOR", "TITLE", "YEAR", "PUBLISHER", 
		"JOURNAL", "PAGES", "VOLUME", "NUMBER", "BOOKTITLE", "MONTH", "COMMA", 
		"Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", 
		"Nov", "Dec", "DIGITS", "PUNC", "FREETEXT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pract3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  // EndNote XML print methods
	  public static void xmlout(String x, String y) { out.println("<"+x+">"+y+"</"+x+">");}
	  public static void xmlb(String x)             { out.println("<" +x+">");}
	  public static void xmle(String x)             { out.println("</"+x+">");}

	  // define your own members here
	  public static void recordb() {xmlb(RECORD);
	                                xmlout("rec-number", "" + records++);}
	  public static void reftypeOut(String label, int type) {
	    out.println("<ref-type name=\"" + label + "\">"+type+"</ref-type>");
	  }

	  public static String trim(String input, String character) {
	    return trim(input, character, character);
	  }
	  // Trimmer end and begin if needed
	  public static String trim(String input, String begin, String end) {
	    if (input.startsWith(begin) && input.endsWith(end)) {
	        return input.substring(1, input.length() - 1);
	    }
	    return input;
	  }

	  public static PrintStream out = System.out;
	  public static int records = 1;

	  public static final String RECORD = "record";
	  public static final String CONTRIBUTORS = "contributors";
	  public static final String AUTHORS = "authors";
	  public static final String AUTH = "author";
	  public static final String TITLES = "titles";
	  public static final String TIT = "title";
	  public static final String PAGE = "pages";

	public Pract3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BibtexContext extends ParserRuleContext {
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public BibtexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bibtex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterBibtex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitBibtex(this);
		}
	}

	public final BibtexContext bibtex() throws RecognitionException {
		BibtexContext _localctx = new BibtexContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_bibtex);
		System.out.println("<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\r\n<xml>\r\n<records>");
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			s();
			}
			System.out.println("</records>\r\n</xml>");
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SContext extends ParserRuleContext {
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Pract3Parser.EOF, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_s);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			b(0);
			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BContext extends ParserRuleContext {
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public BbContext bb() {
			return getRuleContext(BbContext.class,0);
		}
		public BContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitB(this);
		}
	}

	public final BContext b() throws RecognitionException {
		return b(0);
	}

	private BContext b(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BContext _localctx = new BContext(_ctx, _parentState);
		BContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_b, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_b);
					setState(96);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(97);
					bb();
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class BbContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(Pract3Parser.AT, 0); }
		public ValidCaseContext validCase() {
			return getRuleContext(ValidCaseContext.class,0);
		}
		public OtherContext other() {
			return getRuleContext(OtherContext.class,0);
		}
		public BbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterBb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitBb(this);
		}
	}

	public final BbContext bb() throws RecognitionException {
		BbContext _localctx = new BbContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bb);
		recordb();
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(AT);
			setState(106);
			switch (_input.LA(1)) {
			case BOOK:
			case ARTICLE:
			case CONFERENCE:
				{
				setState(104);
				validCase();
				}
				break;
			case FREETEXT:
				{
				setState(105);
				other();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			xmle(RECORD);
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValidCaseContext extends ParserRuleContext {
		public BookContext book() {
			return getRuleContext(BookContext.class,0);
		}
		public ArticleContext article() {
			return getRuleContext(ArticleContext.class,0);
		}
		public ConferenceContext conference() {
			return getRuleContext(ConferenceContext.class,0);
		}
		public ValidCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validCase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterValidCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitValidCase(this);
		}
	}

	public final ValidCaseContext validCase() throws RecognitionException {
		ValidCaseContext _localctx = new ValidCaseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_validCase);
		try {
			setState(111);
			switch (_input.LA(1)) {
			case BOOK:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				book();
				}
				break;
			case ARTICLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				article();
				}
				break;
			case CONFERENCE:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				conference();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherContext extends ParserRuleContext {
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public OtherBodyContext otherBody() {
			return getRuleContext(OtherBodyContext.class,0);
		}
		public OtherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_other; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterOther(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitOther(this);
		}
	}

	public final OtherContext other() throws RecognitionException {
		OtherContext _localctx = new OtherContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_other);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			label();
			setState(114);
			otherBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherBodyContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(Pract3Parser.LCB, 0); }
		public ObodyContext obody() {
			return getRuleContext(ObodyContext.class,0);
		}
		public TerminalNode RCB() { return getToken(Pract3Parser.RCB, 0); }
		public TerminalNode LB() { return getToken(Pract3Parser.LB, 0); }
		public TerminalNode RB() { return getToken(Pract3Parser.RB, 0); }
		public OtherBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterOtherBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitOtherBody(this);
		}
	}

	public final OtherBodyContext otherBody() throws RecognitionException {
		OtherBodyContext _localctx = new OtherBodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_otherBody);
		try {
			setState(124);
			switch (_input.LA(1)) {
			case LCB:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(LCB);
				setState(117);
				obody();
				setState(118);
				match(RCB);
				}
				break;
			case LB:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				match(LB);
				setState(121);
				obody();
				setState(122);
				match(RB);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObodyContext extends ParserRuleContext {
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public List<OtherFieldContext> otherField() {
			return getRuleContexts(OtherFieldContext.class);
		}
		public OtherFieldContext otherField(int i) {
			return getRuleContext(OtherFieldContext.class,i);
		}
		public ObodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterObody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitObody(this);
		}
	}

	public final ObodyContext obody() throws RecognitionException {
		ObodyContext _localctx = new ObodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_obody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			label();
			setState(128); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(127);
				otherField();
				}
				}
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DASH) | (1L << AND) | (1L << BOOK) | (1L << ARTICLE) | (1L << CONFERENCE) | (1L << AUTHOR) | (1L << TITLE) | (1L << YEAR) | (1L << PUBLISHER) | (1L << JOURNAL) | (1L << PAGES) | (1L << VOLUME) | (1L << NUMBER) | (1L << BOOKTITLE) | (1L << MONTH) | (1L << COMMA) | (1L << Jan) | (1L << Feb) | (1L << Mar) | (1L << Apr) | (1L << May) | (1L << Jun) | (1L << Jul) | (1L << Aug) | (1L << Sep) | (1L << Oct) | (1L << Nov) | (1L << Dec) | (1L << PUNC) | (1L << FREETEXT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArticleContext extends ParserRuleContext {
		public TerminalNode ARTICLE() { return getToken(Pract3Parser.ARTICLE, 0); }
		public ArticleBodyContext articleBody() {
			return getRuleContext(ArticleBodyContext.class,0);
		}
		public ArticleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_article; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterArticle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitArticle(this);
		}
	}

	public final ArticleContext article() throws RecognitionException {
		ArticleContext _localctx = new ArticleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_article);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(ARTICLE);
			setState(133);
			articleBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArticleBodyContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(Pract3Parser.LCB, 0); }
		public AbodyContext abody() {
			return getRuleContext(AbodyContext.class,0);
		}
		public TerminalNode RCB() { return getToken(Pract3Parser.RCB, 0); }
		public TerminalNode LB() { return getToken(Pract3Parser.LB, 0); }
		public TerminalNode RB() { return getToken(Pract3Parser.RB, 0); }
		public ArticleBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_articleBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterArticleBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitArticleBody(this);
		}
	}

	public final ArticleBodyContext articleBody() throws RecognitionException {
		ArticleBodyContext _localctx = new ArticleBodyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_articleBody);
		try {
			setState(143);
			switch (_input.LA(1)) {
			case LCB:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(LCB);
				setState(136);
				abody();
				setState(137);
				match(RCB);
				}
				break;
			case LB:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				match(LB);
				setState(140);
				abody();
				setState(141);
				match(RB);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbodyContext extends ParserRuleContext {
		public LabelContext label;
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public List<ArticlefieldContext> articlefield() {
			return getRuleContexts(ArticlefieldContext.class);
		}
		public ArticlefieldContext articlefield(int i) {
			return getRuleContext(ArticlefieldContext.class,i);
		}
		public AbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterAbody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitAbody(this);
		}
	}

	public final AbodyContext abody() throws RecognitionException {
		AbodyContext _localctx = new AbodyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_abody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			((AbodyContext)_localctx).label = label();
			reftypeOut((((AbodyContext)_localctx).label!=null?_input.getText(((AbodyContext)_localctx).label.start,((AbodyContext)_localctx).label.stop):null), 17);
			setState(148); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(147);
				articlefield();
				}
				}
				setState(150); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMMA );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArticlefieldContext extends ParserRuleContext {
		public SepContext sep() {
			return getRuleContext(SepContext.class,0);
		}
		public AuthorfieldContext authorfield() {
			return getRuleContext(AuthorfieldContext.class,0);
		}
		public TitlefieldContext titlefield() {
			return getRuleContext(TitlefieldContext.class,0);
		}
		public JournalfieldContext journalfield() {
			return getRuleContext(JournalfieldContext.class,0);
		}
		public PagesfieldContext pagesfield() {
			return getRuleContext(PagesfieldContext.class,0);
		}
		public VolumefieldContext volumefield() {
			return getRuleContext(VolumefieldContext.class,0);
		}
		public NumberfieldContext numberfield() {
			return getRuleContext(NumberfieldContext.class,0);
		}
		public YearfieldContext yearfield() {
			return getRuleContext(YearfieldContext.class,0);
		}
		public OtherFieldContext otherField() {
			return getRuleContext(OtherFieldContext.class,0);
		}
		public ArticlefieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_articlefield; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).enterArticlefield(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Pract3Listener ) ((Pract3Listener)listener).exitArticlefield(this);
		}
	}
